# DDoS-Tools

./: CMakeLists.txt  DnsAmplification.cpp  DnsAmplification.h  README.md  SynFlood.cpp  SynFlood.h  main.cpp  settings.json
dns_server/: docker-compose.yml
dns_server/coredns/: Corefile
